# app/Http/Controllers/Api/APICategoryController.php
@@ -30,7 +30,7 @@ class APICategoryController extends Controller
      *                     description="ID de la categoría."
      *                 ),
      *                 @OA\Property(
-     *                     property="nombre",
+     *                     property="name",
      *                     type="string",
      *                     description="Nombre de la categoría."
      *                 )
@@ -46,8 +46,52 @@ class APICategoryController extends Controller
     }
 
     /**
-     * Display the specified resource.
-     */
+ * @OA\Get(
+ *     path="/rest/categories/{id}",
+ *     summary="Obtener una categoría específica",
+ *     description="Devuelve los detalles de una categoría en particular.",
+ *     operationId="getCategoryById",
+ *     tags={"Categories"},
+ *     @OA\Parameter(
+ *         name="id",
+ *         in="path",
+ *         description="ID de la categoría a obtener",
+ *         required=true,
+ *         @OA\Schema(
+ *             type="integer",
+ *             format="int64"
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Categoría obtenida correctamente",
+ *         @OA\JsonContent(
+     *             type="array",
+     *             @OA\Items(
+     *                 @OA\Property(
+     *                     property="id",
+     *                     type="integer",
+     *                     description="ID de la categoría."
+     *                 ),
+     *                 @OA\Property(
+     *                     property="name",
+     *                     type="string",
+     *                     description="Nombre de la categoría."
+     *                 )
+     *             )
+     *         )
+ *     ),
+ *     @OA\Response(
+ *         response=404,
+ *         description="Categoría no encontrada",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="error", type="string", example="Categoría no encontrada")
+ *         )
+ *     ),
+ *     security={{ "apiAuth": {} }}
+ * )
+ */
+   
     public function show(string $id)
     {
         $categoria = Category::find($id);
