# storage/api-docs/api-docs.json
@@ -27,7 +27,7 @@
                                                 "description": "ID de la categoría.",
                                                 "type": "integer"
                                             },
-                                            "nombre": {
+                                            "name": {
                                                 "description": "Nombre de la categoría.",
                                                 "type": "string"
                                             }
@@ -39,6 +39,74 @@
                         }
                     }
                 }
+            }
+        },
+        "/rest/categories/{id}": {
+            "get": {
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "Obtener una categoría específica",
+                "description": "Devuelve los detalles de una categoría en particular.",
+                "operationId": "getCategoryById",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID de la categoría a obtener",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Categoría obtenida correctamente",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "id": {
+                                                "description": "ID de la categoría.",
+                                                "type": "integer"
+                                            },
+                                            "name": {
+                                                "description": "Nombre de la categoría.",
+                                                "type": "string"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Categoría no encontrada",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Categoría no encontrada"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
             }
         }
     }
